src/index.css
body {
  margin: 0;
  padding: 0;
  font: normal Tahoma, Geneva, sans-serif;
}

h1 {
  font-size: 4em;
}

.App {
  display: block;
}

.messagebox {
  overflow: auto;
  max-height: 400px;
}

.login-box {
  padding-top: 2em;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.destiny-box {
  min-height: 80px;
  max-width: 550px;
  margin-top: 0.5em;
}

.textinput {
  display: inline-block;
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 15em;
  height: 2em;
  margin: 2px;
  padding: 2px;
  vertical-align: middle;
  border: 1px solid #b7b7b7;
  font: normal 17px/normal Tahoma, Geneva, sans-serif;
  color: rgba(0,0,0,1);
  background: rgba(252,252,252,1);
  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
}

.btnAdd {
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 2px;
  color: #ffffff;
  font-size: 20px;
  display: block;
  background: #1294eb;
  text-decoration: none;
  height: 35px;
  width: 35px;
  padding: 0px;

}

.btnAdd:hover {
  background: #3cb0fd;
  text-decoration: none;
}

.tokens  {
    width:  60px;
    height: 60px;
    padding: 2px;
}

.diceface  {
    width:  35px;
    height: 35px;
    padding: 0px;
}

.messagetext {
    vertical-align: top;
}

input[type=text], select {
    width: 20%;
    padding: 12px 20px;
    margin-left: 10px;
    display: block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

.dice-box {
  box-sizing: content-box;
  display: inline-block;
  min-width: 160px;
  height: 70px;
  padding: 0px;
  overflow: hidden;
  border: none;
  font: normal 23px/1 Tahoma, Geneva, sans-serif;
  color: rgba(255,255,255,1);
  text-align: center;
  text-overflow: ellipsis;
  letter-spacing: 1px;
  background: #ecf0f1;
  box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
}

.dice-amount {
  display: inline-block;
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 25px;
  height: 50px;
  padding: 10px 0px;
  border: none;
  font: normal 40px/normal Tahoma, Geneva, sans-serif;
  color: rgba(0,0,0,1);
  -o-text-overflow: clip;
  text-overflow: clip;
}


.dice  {
  display: inline-block;
    max-width:  60px;
    max-height: 60px;
    padding: 5px;
}

.lrgButton {
  display: inline-block;
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 70px;
  height: 30px;
  cursor: pointer;
  margin: 3px;
  padding: 4px;
  vertical-align: middle;
  border-radius: 1px;
  font: normal 18px/16px Tahoma, Geneva, sans-serif;
  color: #ffffff;
  text-align: center;
  text-overflow: clip;
  background: #1294eb;
  text-decoration: none;
}

.lrgButton:hover {
  background: #3cb0fd;
  text-decoration: none;
}

.message {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 475px;
  min-height: 40px;
  margin: 5px;
  padding: 4px;
  overflow: hidden;
  border: none;
  font: normal 18px/16px Tahoma, Geneva, sans-serif;
  color: rgba(0,0,0,1);
  text-indent: 2px;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  background: #ecf0f1;
  -webkit-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
  box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.characterimage  {
  display: inline-block;
    max-width:  70px;
    max-height: 70px;
    padding: 2px;
}

